# 4klang

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum
4klang_source/Go4kVSTi/: CMakeLists.txt
4klang_source/Go4kVSTi/source/GoSynth/: Go4kStandalone.cpp  Go4kVSTiCore.h  Go4kVSTiGUI.cpp  Go4kVSTiGUI.h  Go4kVSTiGUIQt.cpp  Go4kVSTiGUIQt.h  Go4kVSTimain.cpp  Model4kp.cpp  Model4kp.h  SynthWindow.cpp  SynthWindow.h  SynthWindow.ui  TreeItem4kp.cpp  TreeItem4kp.h
bindings/Python/: .gitignore  README.md  pyproject.toml
bindings/Python/sointu/: build.py
bindings/Python/sointu_bindings/: build.py  test_bindings.py
cmd/sointu-track/: main.go
docs/: fl_studio.md  stack_and_units.md  writing_native_tracks.md
examples/: CMakeLists.txt
examples/asm/: CMakeLists.txt  asmplay.asm  asmplay.unix.asm
examples/c/: CMakeLists.txt  cplay.unix.c  cplay.windows.c
examples/code/Python/: pyproject.toml
tests/: CMakeLists.txt
toolchain/: x86-crinkler-windows.cmake  x86-crinkler.cmake
toolchain/host.unix/: target.elf32.ld.cmake  target.elf64.ld.cmake
tracker/: action.go  model.go
tracker/gioui/: songpanel.go  tracker.go
vm/compiler/templates/amd64-386/: player.h  player.inc  standalone.asm
